e2e/testdata/policy/cidr-group.yaml
apiVersion: cilium.io/v2
kind: CiliumCIDRGroup
metadata:
  name: cidr-group-1
  labels:
    group: test-group
spec:
  externalCIDRs:
    - "10.140.0.0/24"
    - "10.140.10.0/24"
---
apiVersion: cilium.io/v2
kind: CiliumCIDRGroup
metadata:
  name: cidr-group-2
  labels:
    group: test-group
spec:
  externalCIDRs:
    - "10.140.20.0/24"
