e2e/testdata/policy/l3.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: l3-baseline
spec:
  endpointSelector:
    matchLabels:
      k8s:group: test
  ingressDeny:
    - fromEndpoints:
        - matchLabels:
            k8s:test: scapegoat
  egressDeny:
    - toEndpoints:
        - matchLabels:
            k8s:test: scapegoat
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test
  name: l3-self
spec:
  endpointSelector:
    matchLabels:
      k8s:test: self
  ingress:
    - fromCIDR:
        - 10.100.0.0/16 # < 10.0.0.0/8
        - 172.0.0.0/8   # > 172.16.0.0/12
    - fromCIDRSet:
        - cidr: 10.120.0.0/16
          except:
            - 10.120.0.0/24
        - cidrGroupRef: cidr-group-1
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l3
            k8s:test: l3-ingress-explicit-allow-all
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l3
            k8s:test: l3-ingress-no-rule
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l3
            k8s:test: l3-ingress-implicit-deny-all
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l3
            k8s:test: l3-ingress-explicit-deny-all
    - toCIDRSet:
        - cidrGroupSelector:
            matchLabels:
              group: test-group
  egressDeny:
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l3
            k8s:test: l3-egress-explicit-deny-all
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test-l3
  name: l3-ingress-explicit-allow-all
spec:
  endpointSelector:
    matchLabels:
      k8s:test: l3-ingress-explicit-allow-all
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test
            k8s:test: self
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test-l3
  name: l3-ingress-explicit-deny-all
spec:
  endpointSelector:
    matchLabels:
      k8s:test: l3-ingress-explicit-deny-all
  ingressDeny:
    - fromEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test
            k8s:test: self
