e2e/testdata/policy/l4.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test
  name: l4-self
spec:
  endpointSelector:
    matchLabels:
      k8s:test: self
  ingressDeny:
    - fromCIDR:
        - 192.168.100.0/24
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l4
            k8s:test: l4-ingress-explicit-allow-any
      toPorts:
        - ports:
            - port: "53"
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l4
            k8s:test: l4-ingress-explicit-allow-tcp
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l4
            k8s:test: l4-ingress-explicit-deny-any
      toPorts:
        - ports:
            - port: "53"
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l4
            k8s:test: l4-ingress-explicit-deny-udp
      toPorts:
        - ports:
            - port: "161" # SNMP (UDP)
              protocol: UDP
    - toCIDR:
        - 1.1.1.1/32 # Cloudflare DNS
        - 8.8.8.8/32 # Google Public DNS
      toPorts:
        - ports:
            - port: "53"
  egressDeny:
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l4
            k8s:test: l4-egress-explicit-deny-any
      toPorts:
        - ports:
            - port: "53"
    - toEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test-l4
            k8s:test: l4-egress-explicit-deny-tcp
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - toCIDR:
        - 8.8.4.4/32 # Google Public DNS
      toPorts:
        - ports:
            - port: "53"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test-l4
  name: l4-ingress-explicit-allow-any
spec:
  endpointSelector:
    matchLabels:
      k8s:test: l4-ingress-explicit-allow-any
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test
            k8s:test: self
      toPorts:
        - ports:
            - port: "53"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test-l4
  name: l4-ingress-explicit-allow-tcp
spec:
  endpointSelector:
    matchLabels:
      k8s:test: l4-ingress-explicit-allow-tcp
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test
            k8s:test: self
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test-l4
  name: l4-ingress-explicit-deny-any
spec:
  endpointSelector:
    matchLabels:
      k8s:test: l4-ingress-explicit-deny-any
  ingressDeny:
    - fromEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test
            k8s:test: self
      toPorts:
        - ports:
            - port: "53"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test-l4
  name: l4-ingress-explicit-deny-udp
spec:
  endpointSelector:
    matchLabels:
      k8s:test: l4-ingress-explicit-deny-udp
  ingressDeny:
    - fromEndpoints:
        - matchLabels:
            k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: test
            k8s:test: self
      toPorts:
        - ports:
            - port: "161" # SNMP (UDP)
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: test-l4
  name: l4-ingress-all-allow-tcp
spec:
  endpointSelector:
    matchLabels:
      k8s:test: l4-ingress-all-allow-tcp
  ingress:
    - toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
